apps/general/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: scarey
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/scareyo/web:m8pi0f4hmqw8hrqadk9ricllj6wwprlx
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
