apps/general/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: scarey
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
